--- a/Kommunikation_Applikation_und_Hexacopter.tex
+++ b/Kommunikation_Applikation_und_Hexacopter.tex
@@ -89,6 +89,16 @@ Seitens des Hexacopters wird ein zusätzliches Modul benötigt, dieses muss übe
 
 
   \subsection{Technische Planung}
+  
+      \subsubsection{Eclipse}
+    
+Eclipse, entwickelt von der Eclipse Foundation, ist ein Open Source Programmierwerkzeug. Ursprünglich wurde es als integrierte Entwicklungsumgebung für die Programmiersprache Java entwickelt, heutzutage wird es jedoch auch zur Bewältigung einiger anderer Entwicklungsaufgaben verwendet.
+
+    \subsubsection{JDBC}
+    
+The Java Database Connectivity (JDBC) API is the industry standard for database-independent connectivity between the Java programming language and a wide range of databases  SQL databases and other tabular data sources, such as spreadsheets or flat files. The JDBC API provides a call-level API for SQL-based database access.
+JDBC technology allows you to use the Java programming language to exploit "Write Once, Run Anywhere" capabilities for applications that require access to enterprise data. With a JDBC technology-enabled driver, you can connect all corporate data even in a heterogeneous environment.
+
 
   \subsection{Umsetzung}
 
