--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -181,7 +181,7 @@
 	showspaces = false,
 	frame = single,
   otherkeywords={bit},
-	escapechar = $
+	escapechar = §
 }
 %lstset{language=...} vor jedem Listing
 
