chrisys vorläufige quellen :3

--- a/diplom.bib
+++ b/diplom.bib
@@ -252,3 +252,189 @@
 	title = {Wie Farben wirken},
 	year = {2004}
 }
+
+%chrisy
+@online{Vicon,
+	lastchecked = {2016-03-03},
+	url = {http://www.vicon.com/what-is-motion-capture},
+	title = {What is Motion Capture?},
+}
+%chrisy
+@online{NasaCGuide,
+	lastchecked = {2016-03-03},
+	url = {homepages.inf.ed.ac.uk/dts/pm/Papers/nasa-c-style.pdf},
+	title = {C STYLE GUIDE},
+}
+@online{Tool_yed,
+	lastchecked = {2016-03-03},
+	url = {https://www.yworks.com/products/yed},
+	title = {yEd Graph Editor},
+}
+%chrisy
+@online{Tool_mplab,
+	lastchecked = {2016-03-03},
+	url = {http://www.microchip.com/mplab/mplab-x-ide},
+	title = {MPLAB® X Integrated Development Environment (IDE)},
+}
+%chrisy
+@online{Tool_github,
+	lastchecked = {2016-03-03},
+	url = {https://guides.github.com/activities/hello-world/},
+	title = {Hello World},
+}
+%chrisy
+@online{pos_signal_1,
+	lastchecked = {2016-03-03},
+	url = {http://www2.informatik.hu-berlin.de/rok/SuD/Studienarbeit_Menz.pdf},
+	title = {RFID basierte Positionsbestimmung},
+}
+%chrisy
+@online{pos_signal_2,
+	lastchecked = {2016-03-03},
+	url = {http://www.mi.fu-berlin.de/inf/groups/ag-tech/teaching/2009-10_WS/S_19510b_Proseminar_Technische_Informatik/schmidt10positionsbestimmung.pdf},
+	title = {Positionsbestimmung in Gebäuden},
+}
+%chrisy
+@online{pos_eigenschaften,
+	lastchecked = {2016-03-03},
+	url = {http://inka.htw-berlin.de/Sieck/Abschlussarbeiten/Bunk_MA.pdf},
+	title = {Verbesserte Objekterkennung in Augmented Reality Anwendungen unter Verwendung von Sensorsystemen},
+}
+%chrisy
+@online{pos_signal_3,
+	lastchecked = {2016-03-03},
+	url = {http://www.pitt.edu/~dtipper/2011/Survey1.pdf},
+	title = {Survey of Wireless Indoor Positioning Techniques and Systems},
+}
+%chrisy
+@online{pos_signal_4,
+	lastchecked = {2016-03-07},
+	url = {geodaesie.info/system/files/privat/zfv_2006_1_Retscher_Kistenich.pdf},
+	title = {Vergleich von Systemen zur Positionsbestimmung und Navigation in Gebäuden},
+}
+%chrisy
+@online{copterAnwendung,
+	lastchecked = {2016-03-03},
+	url = {http://www.drohnen.de/was-sind-drohnen/},
+	title = {Was sind Drohnen?},
+}
+%chrisy
+@online{posAnwendung,
+	lastchecked = {2016-03-03},
+	url = {http://www.schrack-seconet.com/de/products_solutions/health_care/disorientation_system/},
+	title = {Desorientiertensystem},
+}
+%chrisy
+@online{Pixy,
+	lastchecked = {2016-03-03},
+	url = {http://cmucam.org/projects/cmucam5},
+	title = {Übersicht},
+}
+%chrisy
+@online{optische_sys,
+	lastchecked = {2016-03-03},
+	url = {https://wwwcg.in.tum.de/fileadmin/user_upload/Lehrstuehle/Lehrstuhl_XV/Teaching/WS10_11/Proseminar_Seminar/Talks/Kathrin_Oellerer.pdf},
+	title = {How to make a PIXAR movie - Motion Capturing},
+}
+%chrisy
+@online{Ultrasonic,
+	lastchecked = {2016-03-03},
+	url = {http://www.mikrocontroller.net/attachment/218122/HC-04_ultraschallmodul_beschreibung_3.pdf},
+	title = {Ultraschall Messmodul HC-SR04},
+}
+%chrisy
+@online{Bildverarbeitung,
+	lastchecked = {2016-03-03},
+	url = {http://www9.in.tum.de/seminare/hs.SS06.EAMA/material/01_ausarbeitung.pdf},
+	title = {Grundlagen: Bildverarbeitung / Objekterkennung},
+}
+%chrisy
+@online{PositionAllg,
+	lastchecked = {2016-03-03},
+	url = {http://www.vdc-fellbach.de/wissen/vr-hardware/tracking-systeme},
+	title = {Tracking},
+}
+%chrisy
+@online{machinevision,
+	lastchecked = {2016-03-05},
+	url = {http://whatis.techtarget.com/definition/machine-vision},
+	title = {Definition machine vision},
+}
+%chrisy
+@online{obj_det_trak,
+	lastchecked = {2016-03-05},
+	url = {http://de.slideshare.net/VanyaVabrina/real-time-object-tracking},
+	title = {real-time object detection and tracking},
+}
+%chrisy
+@online{Pixy_Verfahren,
+	lastchecked = {2016-03-05},
+	url = {http://www.cs.cmu.edu/~jbruce/cmvision/papers/CMVision-IROS2000.pdf},
+	title = {Fast and Inexpensive Color Image Segmentation for Interactive Robots},
+}
+%chrisy
+@online{Pixy_Verfahren2,
+	lastchecked = {2016-03-05},
+	url = {http://www.cs.cmu.edu/~jbruce/cmvision/},
+	title = {The CORAL Group's Color Machine Vision Project},
+}
+%chrisy
+@online{NazaUserManual,
+	lastchecked = {2016-03-05},
+	url = {http://dl.djicdn.com/downloads/naza-m%20lite/en/NAZA-M%20LITE_User_Manual_v2.00_en.pdf},
+	title = {NAZA-M Lite User Manual},
+}
+%chrisy
+@online{Seg_modell,
+	lastchecked = {2016-03-06},
+	url = {http://www9.in.tum.de/seminare/ps.WS05.gdbv/ausarbeitungen/ps-gdbv-ws05-07.pdf},
+	title = {Modellbasierte Segmentierung},
+}
+%chrisy
+@online{Seg_punkt,
+	lastchecked = {2016-03-06},
+	url = {http://www.gris.informatik.tu-darmstadt.de/lehre/seminarpraktikum/cg+krebs/ss08/slides/Lungenuntersuchung_Handout.pdf},
+	title = {Computergraphik in der Krebstherapie},
+}
+%chrisy
+@online{Seg_region,
+	lastchecked = {2016-03-06},
+	url = {http://www.di.ubi.pt/~agomes/cvm/teoricas/07-regionsegmentation.pdf},
+	title = {Computacao Visual e Multimedia},
+}
+%chrisy
+@online{Seg_coocc,
+	lastchecked = {2016-03-07},
+	url = {http://www.weblearn.hs-bremen.de/risse/AWI/TEXTUR/merkmale.htm},
+	title = {Teil 1: Texturmerkmale, Grauwertübergangsmatrix-Verfahren},
+}
+%chrisy
+@online{Seg_textur,
+	lastchecked = {2016-03-07},
+	url = {http://www.mathematik.uni-ulm.de/stochastik/lehre/ws05_06/seminar/sauter.pdf},
+	title = {Bildsegmentierung: Übersicht},
+}
+%chrisy
+@online{machinevision2,
+	lastchecked = {2016-03-06},
+	url = {https://www.sim.informatik.tu-darmstadt.de/publ/da/2008-Baumgartner.pdf},
+	title = {Automatische Farbklassifikation zur Anwendung im RoboCup},
+}
+%chrisy
+@online{Bildverarbeitung2,
+	lastchecked = {2016-03-07},
+	url = {https://www.htw-dresden.de/fileadmin/userfiles/et/Labore/Prozessmesstechnik/Bildverarbeitung.pdf},
+	title = {Komplexpraktikum Automatisierungstechnik},
+}
+%chrisy
+@online{NAZA_Konfig,
+	lastchecked = {2016-03-08},
+	url = {http://www.dji.com/de/product/naza-m-lite/feature},
+	title = {NAZA M-LITE},
+}
+%chrisy
+@online{Seg_modell,
+	lastchecked = {2016-03-06},
+	url = {http://www9.in.tum.de/seminare/ps.WS05.gdbv/ausarbeitungen/ps-gdbv-ws05-07.pdf},
+	title = {Modellbasierte Segmentierung},
+}
