schönere formulierung statt "was es schon gibt"

--- a/Allgemeines.tex
+++ b/Allgemeines.tex
@@ -19,7 +19,7 @@
   So entstand "Hovering Steward - der autonom fliegende Kellner", ein dreidimensionales Tracking-System, welches eine Drohne in einem Raum die Aufgaben eines Kellners durchführen lässt.
   Das Projekt erhielt später noch eine weitere Komponente, nämlich eine digitale Speisekarte, um das System in einem Restaurant vollständig zu automatisieren.
 
-  \subsection{Was es schon gibt}
+  \subsection{Stand der Technik}
 
   \textbf{Themenrestaurants}
   \begin{itemize}
