--- a/diplom.bib
+++ b/diplom.bib
@@ -433,8 +433,8 @@
 	title = {NAZA M-LITE},
 }
 %chrisy
-@online{Seg_modell,
-	lastchecked = {2016-03-06},
-	url = {http://www9.in.tum.de/seminare/ps.WS05.gdbv/ausarbeitungen/ps-gdbv-ws05-07.pdf},
-	title = {Modellbasierte Segmentierung},
+@online{opticalFlow,
+	lastchecked = {2016-03-00},
+	url = {http://www.inf.fu-berlin.de/inst/ag-ki/rojas_home/documents/Betreute_Arbeiten/Master-Zetzsche.pdf},
+	title = {Kollisionserkennung für Single-/Multicopter mit Hilfe des Optischen Flusses},
 }
